--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -41,44 +41,16 @@
 <div class="contact-container">
   <div class="row">
 <div class="contact-text padd-150 p-top-bottom">
-    <h1>  Contact Us</h1>
-    <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque beatae, quo quos aut sed qui reprehenderit similique rem excepturi, numquam voluptatum facere voluptatibus delectus nulla eaque vero natus ab ad?</p>
+    <h1 class="heading">  Contact Us</h1>
+    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque beatae, quo quos aut sed qui reprehenderit similique rem excepturi, numquam voluptatum facere voluptatibus delectus nulla eaque vero natus ab ad?</p>
 </div>
 </div>
-
 </div>
-<!-- <div class="contact-card-container ">
-    <div class="rows">
-    <div class="contact-card padd-150">
-        <div class="row">
-          <div class="contact-item padd-15 " data-aos="flip-up" data-aos-delay="700">
-            <i class="fa-solid fa-message"></i>
-            <h1>Chat With Us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi.</p>
-            <a href="#">Chat With Us</a>
-          </div>
-
-          <div class="contact-item padd-15 "  data-aos="flip-up" data-aos-delay="700">
-            <i class="fa-solid fa-envelope-open-text"></i>         
-            <h1>Email Us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi.</p>
-            <a class="btn1 col-12 "href="#">Email Us</a>
-          </div>
-          <div class="contact-item  padd-15"  data-aos="flip-up" data-aos-delay="700">
-            <i class="fa-solid fa-phone"></i>           
-             <h1>Give Us a Call</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi.</p>
-            <a  href="#">00-976-561-008</a>
-          </div>
-        </div>
-        </div>
-    </div>
-</div> -->
 <div class="conainer contact-card-container">
-  <div class="rows">
-    <div class="box-item padd-150">
+  <div class="rows padd-150">
+    <div class="box-item ">
     <div class="flip-box ">
-      <div class="flip-box-front">
+      <div class="flip-box-front" id="flip-box-front">
         <div class="inner">
         <i class="fa-solid fa-3x fa-message icons"  style="color:#2390ff;"></i>
         <h1 class="flip-box-header">Chat With Us</h1>
@@ -87,9 +59,9 @@
       </div>
       </div>
 
-      <div class="flip-box-back" >
+      <div class="flip-box-back" id="flip-box-back">
         <div class="inner">
-        <i class="fa-solid fa-3x fa-message"  style="color:#2390ff; "></i>
+        <i class="fa-solid fa-3x fa-message icons"  style="color:#2390ff; "></i>
         <h1 class="flip-box-header">Chat With Us</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi.</p>
         <a href="#">Chat With Us</a>
@@ -97,39 +69,39 @@
     </div>
 </div>
 <div class="flip-box ">
-  <div class="flip-box-front">
+  <div class="flip-box-front" id="flip-box-front">
     <div class="inner">
-      <i class="fa-solid fa-3x fa-envelope-open-text"  style="color:#2390ff;"></i>         
+      <i class="fa-solid fa-3x fa-envelope-open-text icons"  style="color:#2390ff;"></i>         
     <h1 class="flip-box-header">Email Us</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi.</p>
-    <a class="emailbtn" href="#">Email Us</a>
+    <a class="flip-button" href="#">Email Us</a>
   </div>
   </div>
-  <div class="flip-box-back" >
+  <div class="flip-box-back" id="flip-box-back">
     <div class="inner">
-      <i class="fa-solid fa-3x fa-envelope-open-text"  style="color:#2390ff;"></i>         
+      <i class="fa-solid fa-3x fa-envelope-open-text icons"  style="color:#2390ff;"></i>         
     <h1 class="flip-box-header">Email Us</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi.</p>
-    <a class="emailbtn" href="#">Email Us</a>
+    <a class="flip-button" href="#">Email Us</a>
   </div>
 </div>
 </div>
 <div class="flip-box">
-  <div class="flip-box-front" >
+  <div class="flip-box-front" id="flip-box-front">
     <div class="inner">
-      <i class="fa-solid fa-3x fa-phone"  style="color:#2390ff;"></i>           
+      <i class="fa-solid fa-3x fa-phone icons"  style="color:#2390ff;"></i>           
     <h1 class="flip-box-header">Give Us a Call</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi.</p>
-    <a href="#">Give Us a Call</a>
+    <a href="#">00-976-561-008</a>
   </div>
   </div>
 
-  <div class="flip-box-back" >
+  <div class="flip-box-back" id="flip-box-back">
     <div class="inner">
-      <i class="fa-solid fa-3x fa-phone"  style="color:#2390ff;"></i>           
+      <i class="fa-solid fa-3x fa-phone icons"  style="color:#2390ff;"></i>           
     <h1 class="flip-box-header">Give Us a Call</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi.</p>
-    <a href="#">Give Us a Call</a>
+    <a href="#">00-976-561-008</a>
   </div>
 </div>
 </div>
@@ -140,30 +112,30 @@
     <div class="row">
         <div class="contact-form  padd-15">
           <div class="row">
-            <div class="talk-section padd-15 col-12 hidden" >
-                <h1>Talk to our seles & marketing department team</h1>
-                <p>Collaboratively promote client-focused convergence vis-a-vis customer directed alignments via standardized infrastructures.</p>
+            <div class="talk-section padd-15 col-12" >
+                <h1 class="hidden">Talk to our seles & marketing department team</h1>
+                <p class="hidden">Collaboratively promote client-focused convergence vis-a-vis customer directed alignments via standardized infrastructures.</p>
             </div>
-            <div class="row padd-15">
-            <div class="form-item col-6 padd-15">
-             <div class="form-group hidden ">
+            <div class="row padd-15" id="main-form">
+            <div class="form-item col-6 padd-15 hidden">
+             <div class="form-group">
                 <label for="Name">First Name</label>
                 <input type="text"  class="form-control" placeholder="First Name">
              </div>
             </div>
-            <div class="form-item col-6 padd-15">
-                <div class="form-group hidden">
+            <div class="form-item col-6 padd-15 hidden">
+                <div class="form-group ">
                 <label for="Name">Last Name</label>
                    <input type="text"  class="form-control" placeholder="Last Name">
                 </div>
                </div>
-            <div class="form-item col-6 padd-15">
-                <div class="form-group hidden">
+            <div class="form-item col-6 padd-15 hidden">
+                <div class="form-group">
                 <label for="phone">Phone</label>
                    <input type="text"  class="form-control" placeholder="Phone">
                 </div>
                </div>
-               <div class="form-item col-6 padd-15">
+               <div class="form-item col-6 padd-15 hidden">
                 <div class="form-group hidden">
                 <label for="email">Email</label>
                    <input type="email"  class="form-control" placeholder="Email">
@@ -172,16 +144,16 @@
               </div>
           </div>
           <div class="row">
-            <div class="form-item col-12 padd-15">
-                <div class="form-group hidden">
+            <div class="form-item col-12 padd-15 hidden">
+                <div class="form-group" id="form-group">
                 <label for="Message">Message</label>
                   <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
                  </div>
                </div>
           </div>
           <div class="row">
-            <div class="form-item col-12 padd-15">
-                <div class="form-group hidden">
+            <div class="form-item col-12 padd-15 hidden">
+                <div class="form-group">
                  <button type="submit" class="btn">Get Into Touch</button>
                 </div>
                </div>
@@ -196,8 +168,6 @@
 </section>
 <!--custom script links -->
 <script type="text/javascript" src="../assets/js/custom/contact.js"></script>
-<script type="text/javascript" src="./assets/js/custom/jquery.js"></script>
-<script type="text/javascript" src="./assets/js/custom/script.js"></script>
 
 <!-- font awesome -->
 <script src="../assets/FontAwesome/js/all.js"></script>
